@@ -86,6 +86,7 @@ function update_address(hash, txid, amount, type, cb) {
               if (typeof address_tx == "undefined") {
                 var newAddressTx = new AddressTx({
                   a_id: hash,
+                  balance: received - sent,
                   txid: txid
                 });
                 newAddressTx.save(function(err) {
@@ -96,7 +97,13 @@ function update_address(hash, txid, amount, type, cb) {
                   }
                 });
               } else {
-                return cb(); //duplicate
+                AddressTx.updateOne({a_id: hash, txid: txid}, {
+                  a_id: hash,
+                  balance: received - sent,
+                  txid: txid
+                }, function() {
+                  return cb();
+                });
               }
             });
           });
@@ -123,6 +130,7 @@ function update_address(hash, txid, amount, type, cb) {
         } else {
           var newAddressTx = new AddressTx({
             a_id: hash,
+            balance: amount,
             txid: txid
           });
           newAddressTx.save(function(err) {
@@ -509,9 +517,13 @@ module.exports = {
                   var i = loop.iteration();
                   find_tx(hashes[i].txid, function (tx) {
                     if (tx && !txs.includes(tx)) {
+                      // tx = {...hashes[i], ...tx}
+                      tx.balance = hashes[i].balance;
                       txs.push(tx);
                       loop.next();
                     } else if (!txs.includes(tx)) {
+                      // tx = {...hashes[i], ...tx}
+                      tx.balance = hashes[i].balance;
                       txs.push("1. Not found");
                       loop.next();
                     } else {
